--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.1",
     "typescript": "^4.4.2",
