--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Brain Games",
-  "name": "Brain Games Español",
+  "short_name": "Brain Games Es",
+  "name": "Brain Games Es – ArenasAgustin",
   "icons": [
     {
       "src": "brain64.png",
