--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "Brain Games",
-  "name": "Brain Games Español",
+  "short_name": "Brain Games Es",
+  "name": "Brain Games Es – ArenasAgustin",
   "icons": [
     {
       "src": "brain64.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
       "src": "brain256.png",
