--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-snowfall": "^1.2.1",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.1",
     "typescript": "^4.4.2",
