--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.21",
-    "axios": "^0.26.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "react-snowfall": "^1.2.1",
-    "redux-thunk": "^2.4.1",
-    "sass": "^1.45.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "@types/jest": "30.0.0",
+    "@types/node": "25.0.2",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "@types/react-redux": "7.1.34",
+    "axios": "1.13.2",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-icons": "5.5.0",
+    "react-redux": "9.2.0",
+    "react-router-dom": "7.10.1",
+    "react-scripts": "5.0.1",
+    "react-snowfall": "2.4.0",
+    "redux-thunk": "3.1.0",
+    "sass": "1.96.0",
+    "typescript": "5.9.3",
+    "web-vitals": "5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
