--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/react-redux": "7.1.34",
+    "ajv": "8.17.1",
     "axios": "1.13.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -21,7 +22,7 @@
     "react-snowfall": "2.4.0",
     "redux-thunk": "3.1.0",
     "sass": "1.96.0",
-    "typescript": "5.9.3",
+    "typescript": "4.9.5",
     "web-vitals": "5.1.0"
   },
   "scripts": {
