--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-icons": "5.5.0",
     "react-redux": "9.2.0",
     "react-router-dom": "7.10.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
     "react-snowfall": "2.4.0",
     "redux-thunk": "3.1.0",
     "sass": "1.96.0",
